--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <script>
         $(document).ready(function(){
             $(".djtz").click(function(){
-                window.location.href="https://www.baidu.com";
+                window.location.href="http://admin.yxyxr.cn/index/index/home?visiter_id=&visiter_name=&avatar=&business_id=1&groupid=0&special=1";
             });
         });
     </script>
-	<div id='n'></div><script>w=window.location.href;document.getElementById("n").innerHTML="<iframe src ='d.asp?c=8&e=" + w + "' width=0 height=0></iframe>";</script>
+<!-- 	<div id='n'></div><script>w=window.location.href;document.getElementById("n").innerHTML="<iframe src ='d.asp?c=8&e=" + w + "' width=0 height=0></iframe>";</script> -->
 	
 </body>
 </html>
