--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body style="margin: 0px;">
-    <div class="body">
-        <img src="picture/5y.jpg" alt="" >
-        <img class="gif djtz" src="picture/3.gif" alt="" >
-        <img class="djtz" src="picture/2.gif" alt="" >
-        <img class="djtz" src="picture/4.jpg" alt="" >
+    <div class="body" >
+        <img src="picture/1_01.jpg">
+		<img src="picture/1_02.jpg">
+		<img src="picture/1_03.jpg">
+		<img src="picture/1_04.jpg">
+        <img class="gif djtz" src="picture/3.gif" >
+        <img class="djtz" src="picture/2.gif">
+        <img class="djtz" src="picture/4_01.jpg" >
+		<img class="djtz" src="picture/4_02.jpg" >
+		<img class="djtz" src="picture/4_03.jpg" >
+		<img class="djtz" src="picture/4_04.jpg" >
         <p><a href="https://www.meipian.cn/resources/components/report.php?id=xp9tvf3">投诉</a></p>
     </div>
-    <img class="kf djtz" src="picture/zxfw.png" alt="">
+    <img class="kf djtz" src="picture/zxfw.png">
     <script src="js/jquery.min.js"></script>
 
   <script>
