--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>专业淸理疆尸粉</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body style="margin: 0px;">
+<body style="margin: 0px;line-height: 0;" >
     <div class="body" >
         <img src="picture/1_01.jpg">
 		<img src="picture/1_02.jpg">
