--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="picture/1_01.jpg">
 		<img src="picture/1_02.jpg">
 		<img src="picture/1_03.jpg">
-		<img src="picture/1_04.jpg">
+		<img src="picture/5y.jpg">
         <img class="gif djtz" src="picture/3.gif" >
         <img class="djtz" src="picture/2.gif">
         <img class="djtz" src="picture/4_01.jpg" >
