--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,16 +9,16 @@
 </head>
 <body style="margin: 0px;line-height: 0;" >
     <div class="body" >
-        <img src="picture/1_01.jpg">
-		<img src="picture/1_02.jpg">
-		<img src="picture/1_03.jpg">
-		<img src="picture/5y.jpg">
-        <img class="gif djtz" src="picture/3.gif" >
-        <img class="djtz" src="picture/2.gif">
-        <img class="djtz" src="picture/4_01.jpg" >
-		<img class="djtz" src="picture/4_02.jpg" >
-		<img class="djtz" src="picture/4_03.jpg" >
-		<img class="djtz" src="picture/4_04.jpg" >
+        <img src="https://recards.oss-cn-beijing.aliyuncs.com/picture/1_01.jpg">
+		<img src="https://recards.oss-cn-beijing.aliyuncs.com/picture/1_02.jpg">
+		<img src="https://recards.oss-cn-beijing.aliyuncs.com/picture/1_03.jpg">
+		<img src="https://recards.oss-cn-beijing.aliyuncs.com/picture/5y.jpg">
+        <img class="gif djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/3.gif" >
+        <img class="djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/2.gif">
+        <img class="djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/4_01.jpg" >
+		<img class="djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/4_02.jpg" >
+		<img class="djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/4_03.jpg" >
+		<img class="djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/4_04.jpg" >
         <p><a href="https://www.meipian.cn/resources/components/report.php?id=xp9tvf3">投诉</a></p>
     </div>
     <img class="kf djtz" src="picture/zxfw.png">
