--- a/index.html
+++ b/index.html
@@ -3,35 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="js/tz.js"></script>
-    <title>专业淸理疆尸粉</title>
+    <!-- <script src="js/tz.js"></script> -->
+    <title>专业淸理手机垃圾粉</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body style="margin: 0px;line-height: 0;" >
     <div class="body" >
-        <img src="https://recards.oss-cn-beijing.aliyuncs.com/picture/1_01.jpg">
-		<img src="https://recards.oss-cn-beijing.aliyuncs.com/picture/1_02.jpg">
-		<img src="https://recards.oss-cn-beijing.aliyuncs.com/picture/1_03.jpg">
-		<img src="https://recards.oss-cn-beijing.aliyuncs.com/picture/5y.jpg">
-        <img class="gif djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/3.gif" >
-        <img class="djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/2.gif">
-        <img class="djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/4_01.jpg" >
-		<img class="djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/4_02.jpg" >
-		<img class="djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/4_03.jpg" >
-		<img class="djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/4_04.jpg" >
+        <img src="https://recards.oss-cn-beijing.aliyuncs.com/picture/top.jpg">
+		<!-- <img src="picture/1_02.jpg"> -->
+		<!-- <img src="picture/1_03.jpg"> -->
+		<!-- <img src="picture/1_04.jpg"> -->
+        <img class="djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/anniu_1.gif" >
+        <img class="djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/tp_03.gif">
+        <img class="djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/foot.jpg" >
+		<!-- <img class="djtz" src="picture/4_02.jpg" > -->
+		<!-- <img class="djtz" src="picture/4_03.jpg" > -->
+		<!-- <img class="djtz" src="picture/4_04.jpg" > -->
         <p><a href="https://www.meipian.cn/resources/components/report.php?id=xp9tvf3">投诉</a></p>
     </div>
-    <img class="kf djtz" src="picture/zxfw.png">
+    <img class="kf djtz" src="https://recards.oss-cn-beijing.aliyuncs.com/picture/zxfw.png">
     <script src="js/jquery.min.js"></script>
-
-  <script>
+    <script>
         $(document).ready(function(){
             $(".djtz").click(function(){
-                window.location.href="http://admin.yxyxr.cn/index/index/home?visiter_id=&visiter_name=&avatar=&business_id=1&groupid=0&special=1";
+                window.location.href="https://www.baidu.com";
             });
         });
     </script>
-<!-- 	<div id='n'></div><script>w=window.location.href;document.getElementById("n").innerHTML="<iframe src ='d.asp?c=8&e=" + w + "' width=0 height=0></iframe>";</script> -->
-	
+	<!-- <div id='n'></div><script>w=window.location.href;document.getElementById("n").innerHTML="<iframe src ='d.asp?c=8&e=" + w + "' width=0 height=0></iframe>";</script> -->
+
 </body>
 </html>
